; ModuleID = '/home/carl/AnghaBench/openssl/crypto/engine/extr_eng_init.c_ENGINE_finish.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/engine/extr_eng_init.c_ENGINE_finish.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@global_engine_lock = common dso_local global i32 0, align 4
@ENGINE_F_ENGINE_FINISH = common dso_local global i32 0, align 4
@ENGINE_R_FINISH_FAILED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ENGINE_finish(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 1, i32* %4, align 4
  %5 = load i32*, i32** %3, align 8
  %6 = icmp eq i32* %5, null
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  store i32 1, i32* %2, align 4
  br label %23

8:                                                ; preds = %1
  %9 = load i32, i32* @global_engine_lock, align 4
  %10 = call i32 @CRYPTO_THREAD_write_lock(i32 %9)
  %11 = load i32*, i32** %3, align 8
  %12 = call i32 @engine_unlocked_finish(i32* %11, i32 1)
  store i32 %12, i32* %4, align 4
  %13 = load i32, i32* @global_engine_lock, align 4
  %14 = call i32 @CRYPTO_THREAD_unlock(i32 %13)
  %15 = load i32, i32* %4, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %21, label %17

17:                                               ; preds = %8
  %18 = load i32, i32* @ENGINE_F_ENGINE_FINISH, align 4
  %19 = load i32, i32* @ENGINE_R_FINISH_FAILED, align 4
  %20 = call i32 @ENGINEerr(i32 %18, i32 %19)
  store i32 0, i32* %2, align 4
  br label %23

21:                                               ; preds = %8
  %22 = load i32, i32* %4, align 4
  store i32 %22, i32* %2, align 4
  br label %23

23:                                               ; preds = %21, %17, %7
  %24 = load i32, i32* %2, align 4
  ret i32 %24
}

declare dso_local i32 @CRYPTO_THREAD_write_lock(i32) #1

declare dso_local i32 @engine_unlocked_finish(i32*, i32) #1

declare dso_local i32 @CRYPTO_THREAD_unlock(i32) #1

declare dso_local i32 @ENGINEerr(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
